<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/notifications"
        app:icon="@drawable/ic_action_notifications">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:key="show_notification"
            app:summary="@string/show_notification_of_daily_word"
            app:title="@string/show_notification" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:defaultValue="2"
            app:dependency="show_notification"
            app:entries="@array/widget_contents"
            app:entryValues="@array/widget_contents_values"
            app:key="notification_content"
            app:negativeButtonText="@null"
            app:positiveButtonText="@null"
            app:summary="%s"
            app:title="@string/notification_content" />

        <de.schalter.losungen2.components.preferences.timePicker.TimePreference
            app:iconSpaceReserved="false"
            app:key="notification_time"
            app:defaultValue="420"
            app:title="@string/time_notification"
            app:dependency="show_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/ads_and_statistics"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:key="showAds"
            app:summary="@string/show_ads_description"
            app:title="@string/show_ads" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:key="sendStatistics"
            app:title="@string/send_statistics" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/customization"
        app:iconSpaceReserved="false">

        <de.schalter.customize.ChooseStylePreference
            app:iconSpaceReserved="false"
            app:key="selected_theme"
            app:title="@string/choose_style"
            titleToolbar="@string/app_name" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/external_program"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            app:key="open_external_default"
            app:title="@string/delete_open_external_default_value"
            app:summary="@string/delete_open_external_default_value" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sermons"
        app:iconSpaceReserved="false"
        app:icon="@drawable/ic_action_audiotrack">

        <Preference
            app:iconSpaceReserved="false"
            app:key="delete_sermons"
            app:title="@string/delete_sermons"
            app:summary="@string/delete_sermons_description" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="auto_delete_sermons"
            app:title="@string/auto_delete_sermons"
            app:summary="@string/auto_delete_sermons_description" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
