<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="50"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:title="@string/mark_as_favorite"
        android:icon="@drawable/ic_action_favorite_border"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sermon"
        android:orderInCategory="200"
        android:title="@string/play_sermon"
        android:icon="@drawable/ic_action_audiotrack"
        app:showAsAction="ifRoom" />
</menu>