<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/versesLinearLayout"
    tools:context=".screens.daily.DailyVerseFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/versesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="2dp" />

    <de.schalter.losungen.components.emptyState.EmptyStateView
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        custom:emptyStateButtonText="@string/import_new_data"
        custom:emptyStateIcon="@drawable/ic_file_hidden"
        custom:emptyStateTitle="@string/no_verses_found" />

    <EditText
        android:id="@+id/text_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ems="10"
        android:gravity="bottom|start"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="3sp"
        android:maxLines="5"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_add_notes"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_notes"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:visibility="gone" />

</LinearLayout>