<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/audio_notification_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimary">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="?colorPrimaryDark"
        android:contentDescription="@string/app_name"
        android:padding="9dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/audio_notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/audio_notification_close"
        android:layout_toEndOf="@+id/image_view_logo"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f1f1f1" />

    <ImageView
        android:id="@+id/audio_notification_play"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBottom="@id/image_view_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/image_view_logo"
        android:contentDescription="@string/play_sermon"
        android:padding="5dp"
        android:tint="#FFFFFF"
        app:srcCompat="@drawable/ic_play_arrow" />

    <ImageButton
        android:id="@+id/audio_notification_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:contentDescription="@string/stop_sermon"
        android:focusable="true"
        android:padding="5dp"
        android:tint="#FFFFFF"
        app:srcCompat="@drawable/ic_close" />

</RelativeLayout>